curso_terraform/nginx_server_module/04.sg.tf
resource "aws_security_group" "nginx-server-sg"{
    name = "nginx-server-sg"
    description = "Security group allowing SSH and HTTP access"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.server_name}-sg"
        Environment = var.environment
        Owner = var.owner
        Team = var.team
        Project = var.project
    }
}
